Dodaj dokumentaciju DZ01

--- a/dz/dz-01/demo/demo-01_hw-01.ipynb
+++ b/dz/dz-01/demo/demo-01_hw-01.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*zadnje ažurirano 11.08.2020.*"
+    "*zadnje ažurirano 12.10.2020.*"
    ]
   },
   {
@@ -565,7 +565,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 4096/4096 [02:29<00:00, 27.41it/s]\n"
+      "100%|██████████| 4096/4096 [02:22<00:00, 28.67it/s]\n"
      ]
     }
    ],
@@ -633,7 +633,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Razlog za ovo reskaliranje `dct_blocks` je da dobijemo sliku gdje su vrijednosti unutar nekih normalnih za sliku - u suprotnom imamo preveliku domenu. Razlog zašto su više frekvencije sive su zato što je njihova energija bila gotovo $0$, pa operacijama kojima smo transformirali DCT block smo ih postavili na odmak, $128$, što je siva boja u RGB-u."
+    "Razlog za ovo reskaliranje `dct_blocks` je da dobijemo sliku gdje su vrijednosti unutar nekih normalnih za sliku - u suprotnom imamo preveliku domenu. Razlog zašto su više frekvencije sive su zato što je njihova energija bila gotovo $0$, pa operacijama kojima smo transformirali DCT blok smo ih postavili na odmak, $128$, što je siva boja u RGB-u."
    ]
   },
   {
@@ -763,23 +763,6 @@
    ],
    "source": [
     "print(zigzagged_blocks[0][0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(64, 64, 3, 64)\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(zigzagged_blocks.shape)"
    ]
   },
   {
